[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "pepid/ml/psmatcher.py",
    "pepid/ml/spectrum_generator.py",
    "pepid/ml/spectrum_generator_ci.py",
    "pepid/ml/spectrum_generator_multi.py",
    "pepid/ml/spectrum_generator_out.py",
    "pepid/ml/test_model_out.py",
    "pepid/ml/test_model_ci.py",
    "pepid/ml/train_model.py",
    "pepid/ml/train_model_ci.py",
    "pepid/ml/train_model_out.py",

    #"pepid/ml/spectrum_generator.pkl",
    #"pepid/ml/spectrum_generator_ci.pkl",
    #"pepid/ml/spectrum_generator_out.pkl",
    "pepid/ml/*.pkl",

    "pepid/old_search.py",
    "pepid/gen_fdp*",
]
include = [
    "pepid/*.py",

    "pepid/data/default.cfg",
    "pepid/ml/*",
]

[project]
version = "1.0.0-2"
name = "pepid"
authors = [
    { name="Jeremie Zumer", email="jeremie.zumer@umontreal.ca" },
]
description = "Pepid: a Highly Modifiable, Bioinformatics-Oriented Peptide Search Engine"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [ "License :: OSI Approved :: MIT License",
                "Intended Audience :: Developers",
                "Intended Audience :: Science/Research",
                "Intended Audience :: Healthcare Industry",
                "Development Status :: 5 - Production/Stable",
                "Operating System :: POSIX :: Linux",
                "Topic :: Scientific/Engineering :: Bio-Informatics" ]

[project.urls]
"Homepage" = "https://github.com/lemieux-lab/pepid"
"Bug Tracker" = "https://github.com/lemieux-lab/pepid/issues"
